--- a/pokemon_supabase/android/app/src/main/AndroidManifest.xml
+++ b/pokemon_supabase/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="pokemon_supabase"
+        android:label="pokemon_db"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
