--- a/pokemon_supabase/web/manifest.json
+++ b/pokemon_supabase/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "pokemon_db",
-    "short_name": "pokemon_db",
+    "name": "pokemon_supabase",
+    "short_name": "pokemon_supabase",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
